[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passwordManager"
description = "A pacakge that can generate, validate, encode, and decode passwords. built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.0.1"
authors = [
  { name="Victoria Zhang", email="rz1424@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/nyu-software-engineering/python-package-example"
"Repository" = "https://github.com/nyu-software-engineering/python-package-example.git"
"Bug Tracker" = "https://github.com/nyu-software-engineering/python-package-example/issues"

[project.scripts]
wisdom = "wisdom.__main__:main"